# steer_bot

./: README.md
steer_bot_control/config/: ctrl_ackermann_steering_controller.yaml
steer_bot_description/urdf/: steer_bot.urdf.xacro  wheel.xacro
steer_bot_gazebo/: CMakeLists.txt  package.xml
steer_bot_gazebo/launch/: obstacles.launch  steer_bot_sim_obstacles.launch
steer_bot_gazebo/scripts/: groundtruth_odom.cpp
steer_bot_gazebo/worlds/: loose_uturn.world  tight_uturn.world
steer_bot_navigation/: CMakeLists.txt  README.md  package.xml
steer_bot_navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  planner.yaml  sbpl_lattice_planner_params.yaml  teb_local_planner_params.yaml
steer_bot_navigation/goals/: goal_loose_map_up.bag  goal_tight_map_down.bag  goal_tight_map_up.bag
steer_bot_navigation/launch/: amcl.launch  gmapping.launch  move_base.launch
steer_bot_navigation/maps/: empty_map.pgm  empty_map.yaml
steer_bot_navigation/maps/loose_maps/: map_res_01.pgm  map_res_01.yaml  map_res_025.pgm  map_res_025.yaml  map_res_05.pgm  map_res_05.yaml
steer_bot_navigation/maps/tight_maps/: map_res_001.pgm  map_res_001.yaml  map_res_002.pgm  map_res_002.yaml  map_res_003.pgm  map_res_003.yaml  map_res_004.pgm  map_res_004.yaml  map_res_005.pgm  map_res_005.yaml
steer_bot_navigation/motion_premitives/: generate_motion_primitives.jl  genmprim_unicycle.m  map_res_001.mprim  map_res_002.mprim  map_res_003.mprim  map_res_004.mprim  map_res_005.mprim
steer_bot_navigation/plans/bags/: plan_down_001.bag  plan_down_002.bag  plan_down_003.bag  plan_down_004.bag  plan_down_005.bag  plan_up_001.bag  plan_up_002.bag  plan_up_003.bag  plan_up_004.bag  plan_up_005.bag
steer_bot_navigation/plans/csvs/: plan_down_001.csv  plan_down_002.csv  plan_down_003.csv  plan_down_004.csv  plan_down_005.csv  plan_up_001.csv  plan_up_002.csv  plan_up_003.csv  plan_up_004.csv  plan_up_005.csv
steer_bot_navigation/scripts/: plan_time.py  rosbag_read.py
steer_bot_viz/launch/: steer_bot_navigation_viz.launch
steer_bot_viz/rviz/: amcl.rviz  steer_bot_navigation.rviz
