<?xml version="1.0"?>
<package format="2">
  <name>steer_bot_navigation</name>
  <version>0.0.0</version>
  <description>The steer_bot_navigation package</description>
  <maintainer email="luisansan5@alum.us.es">Luis Sancho</maintainer>
  <license>BSD-3-Clause</license>
    <url type="website">https://github.com/luissancho99</url>
    <url type="repository">https://github.com/luissancho99/steer_bot</url>
    <url type="bugtracker">https://github.com/luissancho99/steer_bot/issues</url>
    <author email="luisansan5@alum.us.es">Luis Sancho</author>



  <buildtool_depend>catkin</buildtool_depend>
<exec_depend>ackermann_steering_controller</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>gazebo_ros_control</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>roslaunch</exec_depend>
    <exec_depend>rqt_robot_steering</exec_depend>
    <exec_depend>steer_bot_control</exec_depend>
    <exec_depend>steer_bot_description</exec_depend>
    <exec_depend>steer_bot_hardware_gazebo</exec_depend>
    <exec_depend>steer_drive_controller</exec_depend>
    <exec_depend>xacro</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
